--- a/desafios/d011/style.css
+++ b/desafios/d011/style.css
@@ -38,6 +38,11 @@ body{
           left: 50%;
           top: 50%;
           transform: translate(-50%, -50%);
+          font-style: initial;
+          color: white;
+          font-size: 19px;
+          
+          
     }
     
        
